--- a/radiopi/index.html
+++ b/radiopi/index.html
@@ -3,11 +3,12 @@
 	<meta charset="utf-8">
 	<title>Radio Pi - Deploy your own Web app to Windows IoT on a Raspberry Pi 2.</title>
 	<meta name="og:title" content="Radio Pi">
-	<meta name="description" content="Test Whether Certain CSS Properties and Values are Supported">
-	<meta name="keywords" content="CSS, css, @supports, feature testing">
-	<meta name="author" content="KirilSeksenov">
+	<meta name="description" content="3D print your own boom box and run a music Web app on a Rasberry Pi 2">
+	<meta name="keywords" content="3D printing, Raspberry pi 2, Windows IoT, Windows Web Apps">
+	<meta name="author" content="Kiril Seksenov">
 	<link rel="stylesheet" type="text/css" href="https://edgeportal.blob.core.windows.net/media/demotemplate.css">
 	<link rel="stylesheet" type="text/css" href="styles/demo.css">
+	<link rel="stylesheet" type="text/css" href="styles/edgecore.full.min.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 		<div class="container">
 			<div class="section__header">
 				<h1>Radio Pi</h1>
-				<p class="title">Build your own radio and deply your Web app to Windows IoT on a Raspberry Pi 2</p>
+				<p class="title">3D print a boom box and deploy your Web app to Windows IoT on a Raspberry Pi 2</p>
 			</div>
 		</div>
 	</header>
@@ -26,49 +27,39 @@
 	<section role="region" class="section">
 		<div class="container">
 			<header class="section__header">
-				<h2>Inspiration for this project</h2>
+				<h2>About this project</h2>
 			</header>
 			<div class="section__body">
-				<p>Bacon ipsum dolor amet tri-tip kielbasa spare ribs pork chop boudin turducken picanha. Prosciutto biltong pork belly, filet mignon ground round meatloaf kielbasa swine tri-tip jerky spare ribs. Pork loin ground round boudin shankle, kevin hamburger turducken venison pork chop doner. Flank corned beef pancetta drumstick. Shoulder hamburger sirloin, prosciutto pancetta andouille rump spare ribs chicken leberkas jowl short ribs.</p>
-
+                <div class="layout layout--equal">
+                    <div class="module">
+                        <a class="button button--github button--page-primary page-intro__button--page-primary">Fork on github</a>
+				        <p>Bacon ipsum dolor amet tri-tip kielbasa spare ribs pork chop boudin turducken picanha. Prosciutto biltong pork belly, filet mignon ground round meatloaf kielbasa swine tri-tip jerky spare ribs. Pork loin ground round boudin shankle, kevin hamburger turducken venison pork chop doner. Flank corned beef pancetta drumstick. Shoulder hamburger sirloin, prosciutto pancetta andouille rump spare ribs chicken leberkas jowl short ribs.</p>
+                        <div class="video--container">
+                            <iframe src="https://channel9.msdn.com/Blogs/raw-tech/Halo-Minecraft-and-More-How-Microsoft-Studios-Processes-Gaming-Event-Data/player" frameborder="0" width="560" height="315"></iframe>
+                        </div>
+                    </div>
+                </div>
 				<div class="subsection">
 					<header class="subsection__header subsection__header--alt">
-						<h3 class="title">Step 1</h3>
+						<h3 class="title">Step 1: 3D print your own boom box</h3>
 					</header>
 					<div class="subsection__body">
 						<div class="layout layout--equal">
 							<div class="module">
-								<h5>Another title</h5>
-                                <p>Fatback shoulder meatball landjaeger picanha beef. Short loin short ribs bresaola, pork belly chicken tongue ball tip boudin t-bone ground round drumstick. Venison cupim ham hock corned beef ham, jerky shoulder tri-tip flank swine short ribs picanha. Landjaeger ground round shoulder pork belly hamburger capicola chicken doner bresaola fatback pastrami short ribs pig. Beef doner andouille prosciutto hamburger. Bacon tail porchetta tri-tip pancetta kevin cow pork loin shoulder pastrami ribeye capicola picanha.</p>
+                                <p>Get the <a href="#">STL file</a> and 3D print it. Bresaola sirloin shankle porchetta, cupim ribeye salami bacon. Porchetta brisket jerky ham hock boudin biltong beef shoulder. Pastrami fatback picanha doner beef brisket frankfurter sausage shoulder filet mignon rump swine pork ribeye. Pig sausage venison pork belly pork rump. Flank meatball ground round prosciutto biltong pork. Bacon sirloin alcatra kielbasa. Venison hamburger cow corned beef capicola strip steak prosciutto tri-tip filet mignon spare ribs boudin pork belly shoulder brisket kielbasa.</p>
 							</div>
 							<div class="module">
-								<h5>Result</h5>
-								<div class="rendered-result supports-demo" id="ex-1">
-									<b class="supports-demo__element">Fatback shoulder meatball landjaeger picanha beef. Short loin short ribs bresaola, pork belly chicken tongue ball tip boudin t-bone ground round drumstick. Venison cupim ham hock corned beef ham, jerky shoulder tri-tip flank swine short ribs picanha. Landjaeger ground round shoulder pork belly hamburger capicola chicken doner bresaola fatback pastrami short ribs pig. Beef doner andouille prosciutto hamburger. Bacon tail porchetta tri-tip pancetta kevin cow pork loin shoulder pastrami ribeye capicola picanha.</b>
-								</div>
-							</div>
-						</div>
-						<div class="layout layout--equal">
-							<div class="module">
-								<p>Bresaola sirloin shankle porchetta, cupim ribeye salami bacon. Porchetta brisket jerky ham hock boudin biltong beef shoulder. Pastrami fatback picanha doner beef brisket frankfurter sausage shoulder filet mignon rump swine pork ribeye. Pig sausage venison pork belly pork rump. Flank meatball ground round prosciutto biltong pork. Bacon sirloin alcatra kielbasa. Venison hamburger cow corned beef capicola strip steak prosciutto tri-tip filet mignon spare ribs boudin pork belly shoulder brisket kielbasa.</p>
+								<h5>Some image title here</h5>
+                                <img src="images/3d-print-boom-box.jpg" />
 							</div>
 						</div>
 					</div>
 				</div>
-
 				<div class="subsection">
 					<header class="subsection__header subsection__header--alt">
-						<h3 class="title">And ANOTHER TITLE</h3>
+						<h3 class="title">Step 2: Install Windows IoT on your Rasberry Pi 2</h3>
 					</header>
 					<div class="subsection__body">
-						<div class="layout layout--equal">
-							<div class="module">
-								<h5>MORE TITLES!</h5>
-							</div>
-							<div class="module">
-								<h5>Title</h5>
-							</div>
-						</div>
 						<div class="layout layout--equal">
 							<div class="module">
 								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
@@ -76,7 +67,31 @@
 						</div>
 					</div>
 				</div>
-			</div>
+                <div class="subsection">
+					<header class="subsection__header subsection__header--alt">
+						<h3 class="title">Step 3: Deploy you music web app</h3>
+					</header>
+					<div class="subsection__body">
+						<div class="layout layout--equal">
+							<div class="module">
+								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+                <div class="subsection">
+					<header class="subsection__header subsection__header--alt">
+						<h3 class="title">Step 3: Play that funky music</h3>
+					</header>
+					<div class="subsection__body">
+						<div class="layout layout--equal">
+							<div class="module">
+								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
+							</div>
+						</div>
+					</div>
+				</div>                			
+            </div>
 		</div>
 	</section>
 </body>
