add code snippets

--- a/radiopi/index.html
+++ b/radiopi/index.html
@@ -64,6 +64,9 @@
 							<div class="module">
 								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
 							</div>
+                            <div class="module">
+								<pre>//I am a code snippet</pre>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -76,6 +79,9 @@
 							<div class="module">
 								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
 							</div>
+                            <div class="module">
+								<pre>//I am a code snippet</pre>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -87,6 +93,9 @@
 						<div class="layout layout--equal">
 							<div class="module">
 								<p>Doner chuck pastrami ribeye, tail tongue shoulder pork loin bacon kielbasa. Capicola pork loin ribeye beef ribs rump. Beef fatback bacon, prosciutto ground round hamburger alcatra tongue pork loin capicola turkey pancetta cow. Ball tip strip steak doner capicola rump chuck turducken kevin. Ball tip corned beef landjaeger pork belly swine bresaola porchetta biltong t-bone bacon beef ribs. Chuck fatback ball tip pig chicken. Brisket chicken pork, kielbasa prosciutto porchetta swine beef ribs andouille biltong shoulder jerky.</p>
+							</div>
+                            <div class="module">
+								<pre>//I am a code snippet</pre>
 							</div>
 						</div>
 					</div>
